inputClick file reader

--- a/activity.html
+++ b/activity.html
@@ -209,7 +209,7 @@
                         <div class="tab-pane fade" id="pills-you-viewed" role="tabpanel"
                             aria-labelledby="pills-you-viewed-tab" tabindex="0">
 
-                            <div class="user-card-wrap">
+                            <div class="user-card-wrap mt-4">
                                 <div class="user-single-card p-3 bg-white rounded-4">
                                     <div class="uc-dp" style="background-image: url('assets/images/user/blur.png');"></div>
                                     <div class="uc-info">
