--- a/dashboard.html
+++ b/dashboard.html
@@ -52,22 +52,28 @@
                                     <li><a href="connection.html"><img src="assets/images/icon/dashboard/eye.svg"
                                                 alt="">
                                             Visitors</a></li>
-                                    <li><a href="connection.html"><img
-                                                src="assets/images/icon/dashboard/social-network.svg" alt="">
-                                            Liked me</a></li>
                                     <li><a href="connection.html"><img src="assets/images/icon/dashboard/star.svg"
                                                 alt="">
                                             Favourites</a></li>
+                                    <li><a href="connection.html"><img
+                                                src="assets/images/icon/dashboard/social-network.svg" alt="">
+                                            Liked me</a></li>
                                 </ul>
                             </div>
                             <div class="dashboard-inner-widget p-3">
                                 <ul>
+                                    <li><a href="referrals.html"><img src="assets/images/icon/dashboard/chess-queen.svg"
+                                                alt="">
+                                            Premium</a></li>
                                     <li><a href="referrals.html"><img src="assets/images/icon/dashboard/link.svg"
                                                 alt="">
                                             Referrals</a></li>
                                     <li><a href="settings.html"><img src="assets/images/icon/dashboard/settings.svg"
                                                 alt="">
                                             Settings</a></li>
+                                    <li><a href="settings.html"><img src="assets/images/icon/dashboard/coins.svg"
+                                                alt="">
+                                            Buy credit</a></li>
                                 </ul>
                             </div>
                             <div class="log-out-btn-wrap">
