Buy Credit page

--- a/dashboard.html
+++ b/dashboard.html
@@ -71,7 +71,7 @@
                                     <li><a href="settings.html"><img src="assets/images/icon/dashboard/settings.svg"
                                                 alt="">
                                             Settings</a></li>
-                                    <li><a href="settings.html"><img src="assets/images/icon/dashboard/coins.svg"
+                                    <li><a href="buy-credit.html"><img src="assets/images/icon/dashboard/coins.svg"
                                                 alt="">
                                             Buy credit</a></li>
                                 </ul>
