Buy Credit page 3item added

--- a/buy-credit.html
+++ b/buy-credit.html
@@ -71,14 +71,25 @@
                                 <button class="package-select-btn" type="button">Select</button>
                             </div>
                         </div>
-                        <div class="single-credit-package">
+                        <div class="single-credit-package" style="background: rgb(235, 88, 115,33%);;">
                             <div class="header">
                                 <p>2000 Credits</p>
                             </div>
                             <div class="body">
                                 <h1>$ <span>9.99</span></h1>
                                 <p>0.00 USD</p>
-                                <p>Save 0.00 USD</p>
+                                <p>Save 2.00 USD</p>
+                                <button class="package-select-btn" type="button">Select</button>
+                            </div>
+                        </div>
+                        <div class="single-credit-package" style="background: rgb(235, 88, 115,14%);">
+                            <div class="header">
+                                <p>3000 Credits</p>
+                            </div>
+                            <div class="body">
+                                <h1>$ <span>19.99</span></h1>
+                                <p>0.00 USD</p>
+                                <p>Save 5.00 USD</p>
                                 <button class="package-select-btn" type="button">Select</button>
                             </div>
                         </div>
